2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py:
	Use a set as TestCase.files.

2007-04-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/files/__init__.py:
	* gaupol/util.py:
	Fix value of __all__.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (memoize):
	Pickle the id of the self argument of methods.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* tools/nose-cover:
	New file.

2007-04-10  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py:
	* gaupol/unittest/__init__.py:
	Use atexit.register to remove temporary files.

2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/_agents/search.py:
	* gaupol/_agents/text.py:
	* gaupol/finder.py:
	* gaupol/gtk/dialogs/search.py:
	Docstring fixes.

2007-04-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/files/__init__.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/_subfile.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	* gaupol/finder.py:
	Add contracts.
	Use contextlib.closing with codecs.open.

	* gaupol/util.py:
	Use contextlib.closing with codecs.open.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/unittest/case.py (raises):
	New function.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/calculator.py:
	* gaupol/finder.py:
	* gaupol/liner.py:
	* gaupol/parser.py:
	Add contracts.

	* gaupol/util.py (last):
	New function.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/enclib.py:
	* gaupol/langlib.py:
	* gaupol/scriptlib.py:
	Add contracts.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/i18n.py:
	* gaupol/i18n.py:
	New modules.

2007-04-06  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py:
	* gaupol/util.py:
	Minor changes.

2007-04-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (is_method):
	New function. Use with contractual and memoize.
